--- a/index.html
+++ b/index.html
@@ -17,37 +17,65 @@
     <header class="row header">
         <h1>New Year Party Celebration</h1>
         <p>65% OFF on All Categories</p>
-        <img src="https://via.placeholder.com/800x300" alt="Happy New Year">
+        <img src="assets/images/new-party.png" alt="Happy New Year">
     </header>
 
     <!-- Welcome Section -->
+    <section class="happy-new-year">
+        <h2 class="happy">Happy New Year Party</h2>
+        <img src="assets/images/happyNewYear.png" alt="Welcome-Midnight Party">
+    </section>
+    <!-- Welcome Section -->
     <section class="row welcome">
-        <h2>Welcome to the Midnight Party</h2>
-        <img src="https://via.placeholder.com/800x300" alt="Midnight Party">
+        <img src="assets/images/Welcome-Midnight.png" alt="Welcome-Midnight Party">
+    </section>
+    <!-- Join now Section -->
+    <section class="row join">
+        <p><span>Place:</span> New Park Hotel</p>
+        <p><span>Date:</span> 31 December Night 2023</p>
+        <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+        <button>Join Now</button>
+
     </section>
 
     <!-- Coming Soon Section -->
     <section class="row coming-soon">
         <div class="content">
-            <h2>Coming Soon</h2>
-            <img src="https://via.placeholder.com/150" alt="Countdown">
-            <p>2024 is near! Celebrate with us.</p>
+            <div class="new-best">
+                <span>NEW BEST OFFER</span>
+                <h1>Coming Soon</h1>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+                    <img src="assets/images/coming-soon-main.png" alt="coming-soon-main">
+                
+                    <div class="new-best">
+                        <h2>2025</h2>
+                        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                        <img class="second-img" src="assets/images/happyNewYear-second.png" alt="img">
+                </div>
         </div>
     </section>
 
     <!-- Holiday Sale Section -->
-    <section class="row holiday-sale">
+    <section class="salse">
         <h2>Holiday Sale 50%</h2>
-        <img src="https://via.placeholder.com/800x200" alt="Holiday Sale">
+        <!-- <img src="https://via.placeholder.com/800x200" alt="Holiday Sale"> -->
     </section>
 
     <!-- Portfolio Section -->
-    <section class="row portfolio">
+
+    <section class="grid grid-cols-3 portfolio">
         <h2>Our Awesome Portfolio</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
         <div class="portfolio-items">
-            <img src="https://via.placeholder.com/200" alt="Item 1">
-            <img src="https://via.placeholder.com/200" alt="Item 2">
-            <img src="https://via.placeholder.com/200" alt="Item 3">
+            <img src="assets/images/awserm-pro-1.png" alt="Item 1">
+            <img src="assets/images/awserm-pro-2.png" alt="Item 2">
+            <img src="assets/images/awserm-pro-3.png" alt="Item 3">
+        </div>
+        <div class="portfolio-items">
+            <img src="assets/images/awserm-pro-4.png" alt="Item 1">
+            <img src="assets/images/awserm-pro-5.png" alt="Item 2">
+            <img src="assets/images/awserm-pro-6.png" alt="Item 3">
         </div>
     </section>
 
